Initialize DXVA decoder thread with MTA COM apartment model

This allows the thread to be created with a MessagePumpDefault and not
a UI message pump, which can improve performance and might decrease the
frequency of hangs.

MediaFoundation is the only COM used on this thread, and MTA is actually
the preferred apartment model for it.

BUG=665071
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2504473002
Cr-Commit-Position: refs/heads/master@{#432059}

Former-commit-id: 8693fe6e737326df9b10f5cf961862af72c93187